清理废弃的上传接口
